--- a/.github/workflows/ci-image.yml
+++ b/.github/workflows/ci-image.yml
@@ -34,8 +34,8 @@ jobs:
           context: apps/lab-app
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/k3s-lab-app:demo-refactor
-            ghcr.io/${{ github.repository_owner }}/k3s-lab-app:${{ github.sha }}
+            ghcr.io/luffy0807/k3s-lab-app:demo-refactor
+            ghcr.io/luffy0807/k3s-lab-app:${{ github.sha }}
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
